# Parallel-HItori

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  compile.sh  hitoriparallelfunctions.h  hitoriseqfunctions.h  main.c  phitori.c  plot_results.py  run_benchmark_and_plot.sh
